# CherryDAP

./: .gitignore  .gitmodules  404.html  README.md  dap_main.c  dap_main.h  index.html  robots.txt  sitemap.xml
.github/workflows/: HPM-build.yml  HSLinkPro-build.yml  create_riscv32_symlink.sh  deploy-docs.yml
DAP/Include/: DAP.h
DAP/Source/: DAP.c
assets/: 404.html-BYyRTryN.js  404.html-C8xMZFKn.js  404.html-CtP2gbbK.js  404.html-DGrL0gN8.js  404.html-DOVhS1J9.js  404.html-D_Dgj6kY.js  404.html-D__X0AME.js  404.html-FGo6pbIj.js  404.html-PfctGrbm.js  404.html-cCwYtMpQ.js  404.html-ggf06kEg.js  404.html-xVv9Y3xF.js  BL616.html-B2gvrxKY.js  BL616.html-BX0tekl5.js  BL616.html-Bsc_TSV8.js  BL616.html-C5NNx1ds.js  BL616.html-Cg8g4hUM.js  BL616.html-Cr0Aov6k.js  BL616.html-CuO4VzUI.js  BL616.html-D1LRcHcj.js  BL616.html-D2c1CuEs.js  BL616.html-D57qdnbp.js  BL616.html-UNxkLprk.js  BL616.html-ZuAwneU8.js  ESP32-S3-DevKitC-1.html-BcRJ-CT9.js  ESP32-S3-DevKitC-1.html-Bnsqp-Uo.js  ESP32-S3-DevKitC-1.html-CSEqcZp8.js  ESP32-S3-DevKitC-1.html-CiHwoRW_.js  ESP32-S3-DevKitC-1.html-DIYUhBPe.js  ESP32-S3-DevKitC-1.html-HIp3VVdu.js  ESP32-S3-DevKitC-1.html-Kpv0hNu1.js  HPM5301EVKLite.html-BS_VDNhW.js  HPM5301EVKLite.html-BVb7RaJb.js  HPM5301EVKLite.html-Bd8F_Yi3.js  HPM5301EVKLite.html-BiDV4e8o.js  HPM5301EVKLite.html-BpxHC4q-.js  HPM5301EVKLite.html-CzkSvhbu.js  HPM5301EVKLite.html-DKptSi8F.js  HPM5301EVKLite.html-DN8j2-il.js  HPM5301EVKLite.html-DUIijPUU.js  (+76 more)
docs/: package.json  pnpm-lock.yaml
docs/src/: README.md
docs/src/.vuepress/: config.ts  theme.ts
docs/src/.vuepress/navbar/: zh.ts
docs/src/.vuepress/sidebar/: en.ts  zh.ts
docs/src/.vuepress/styles/: config.scss  palette.scss
docs/src/projects/: BL616.md  ESP32-S3-DevKitC-1.md  HPM5301EVKLite.md  HSLink Pro.md  README.md  STM32F429IGT6.md
projects/: BL616.html  ESP32-S3-DevKitC-1.html  HPM5301EVKLite.html  HSLink Pro.html  STM32F429IGT6.html  index.html
projects/HSLink-Lite/: CMakeLists.txt  DAP_config.h  README.md  dp_common.c  main.c  setting.h  usb_config.h
projects/HSLink-Lite/JTAG_DP/: JTAG_DP.c  JTAG_DP.h  JTAG_DP_IO.c  JTAG_DP_SPI.c
projects/HSLink-Lite/SW_DP/: SW_DP.c  SW_DP.h  SW_DP_IO.c  SW_DP_SPI.c
projects/HSLink-Lite/USB2UART/: usb2uart.c  usb2uart.h
projects/HSLink-Lite/boards/hslinklite/: board.c  board.h
projects/HSLink-Lite/swd_host/: swd_host.c  swd_host.h
projects/HSLink-OB/: CMakeLists.txt  DAP_config.h  app.yaml  dp_common.c  dp_common.h  flash_uf2.ld  main.c  setting.h
projects/HSLink-OB/JTAG_DP/: JTAG_DP_SPI.c
projects/HSLink-OB/SW_DP/: SW_DP.c  SW_DP_IO.c
projects/HSLink-OB/USB2UART/: usb2uart.c  usb2uart.h
projects/HSLink-Pro/: README.md
projects/HSLink-Pro/bootloader/: .gitignore  CMakeLists.txt  app.yaml  flash_xip.ld  main.c  usb_config.h
projects/HSLink-Pro/bootloader/bootuf2/: bootuf2.c  bootuf2.h  bootuf2_config.h
projects/HSLink-Pro/bootloader/src/: WS2812_Conf.h  main.c  msc_bootuf2.c  ws2812.cpp  ws2812.h
projects/HSLink-Pro/bootloader/third_party_components/: CMakeLists.txt
projects/HSLink-Pro/bootloader/third_party_components/port/neopixel/: ws2812.cpp
projects/HSLink-Pro/common/: BL_Setting_Common.h  HSLink_Pro_expansion.c  HSLink_Pro_expansion.h
projects/HSLink-Pro/common/easylogger/: elog_cfg.h  elog_port.c
projects/HSLink-Pro/common/fal/: fal_cfg.h  fal_hpm_internal_port.c  fal_parts.c
projects/HSLink-Pro/common/flashdb/: fdb_cfg.h
projects/HSLink-Pro/common/hslinkpro/: board.c  board.h  pinmux.c
projects/HSLink-Pro/hardware/: .gitignore  HSLinkPro.kicad_pcb  HSLinkPro.kicad_pro  HSLinkPro.kicad_sch  Interface.kicad_sch  LogicTranslation.kicad_sch  Power.kicad_sch  README.md
projects/HSLink-Pro/scripts/: MergerBin.py
projects/HSLink-Pro/src/: .version  CMakeLists.txt  DAP_config.h  HSLink_Pro_expansion.c  HSLink_Pro_expansion.cpp  HSLink_Pro_expansion.h  JTAG_DP_SPI.c  LED.h  SW_DP_SPI.c  dp_common.c  dp_common.h  flash_uf2.ld  led_extern.cpp  led_extern.h  main.c  main.cpp  malloc.c  reset_way.cpp  reset_way.h  setting.c  setting.cpp  setting.h  usb2uart.c  usb_config.h  usb_configuration.c  usb_configuration.h
projects/HSLink-Pro/src/HID_COMM/: hid_comm.c  hid_comm.cpp  hid_comm.h
projects/HSLink-Pro/src/JTAG_DP/: JTAG_DP.c  JTAG_DP_IO.c  JTAG_DP_SPI.c
projects/HSLink-Pro/src/SW_DP/: SW_DP.c  SW_DP_IO.c  SW_DP_SPI.c
projects/HSLink-Pro/src/USB2UART/: usb2uart.c  usb2uart.h
projects/HSLink-Pro/src/third_party_components/: CMakeLists.txt
projects/HSLink-Pro/src/third_party_components/port/easylogger/: elog_cfg.h  elog_port.c
projects/HSLink-Pro/src/third_party_components/port/tlsf/: malloc.c
projects/HSLink-Pro/third_party_components/EasyLogger/: CMakeLists.txt
projects/HSLink-Pro/third_party_components/MultiTimer/: CMakeLists.txt
projects/HSLink-Pro/third_party_components/b64.c/: CMakeLists.txt
projects/HSLink-Pro/third_party_components/crc32/: CMakeLists.txt  crc32.cpp  crc32.h
projects/HSLink-Pro/third_party_components/fal/: CMakeLists.txt
projects/HSLink-Pro/third_party_components/flashdb/: CMakeLists.txt
projects/HSLink-Pro/third_party_components/multibutton/: CMakeLists.txt
projects/bl616/: CMakeLists.txt  DAP_config.h  Makefile  README.md  flash_prog_cfg.ini  main.c  proj.conf  usb2uart.c  usb2uart.h  usb_config.h
projects/bl616/bl616dk/: bl616_flash.ld  board.c
projects/esp32s3/: CMakeLists.txt  partitions.csv  sdkconfig
projects/esp32s3/main/: CMakeLists.txt  DAP_config.h  gpio.h  idf_component.yml  main.c  port_common.h  usb2uart.c  usb2uart.h  usb_config.h
projects/hpm5301evklite/: .gitignore  CMakeLists.txt  DAP_config.h  HSLink_Pro_expansion.c  HSLink_Pro_expansion.h  JTAG_DP_SPI.c  README.md  SW_DP_SPI.c  app.yaml  dp_common.c  main.c  usb2uart.c  usb_config.h
projects/hpm5301evklite/bootloader/: .clang-format  CMakeLists.txt  README.md  flash_xip.ld
projects/hpm5301evklite/bootloader/bootuf2/: bootuf2.c  bootuf2.h  bootuf2_config.h
projects/hpm5301evklite/bootloader/src/: main.c  usb_config.h
projects/stm32f429igt6/MDK-ARM/: stm32f429igt6.uvoptx  stm32f429igt6.uvprojx
(+10 files in other folders)
